# ubs-test

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  pyproject.toml  requirements.txt  run_suite.py
.opencode/skills/code_review/: SKILL.md
conf/: env.json
docs/: index.md
examples/: basic_usage.py
libs/: __init__.py
libs/core/: __init__.py  base.py  file_ops.py  fixtures.py  hook_runner.py  node_ops.py  process_ops.py  user_ops.py
libs/core/basecase/: __init__.py  container_overcommit_basecase.py  integration_case.py  obmm_qemu_basecase.py  osturbo_api_basecase.py  overcommit_reliability_basecase.py  qemu_case.py  sys_sentry_basecase.py  turbo_rmrs_api_basecase.py  vm_overcommit_basecase.py
libs/core/stubs/: __init__.py  uniautos.py
libs/hcom/: __init__.py  constants.py  env_check.py  node_run.py  result_verify.py  stub_params.py
libs/host/: __init__.py  linux.py  node_adapter.py
libs/ubsio/: __init__.py  dfc_case.py  dfc_global_var.py  dfc_kv_cli.py  dfc_node_cli.py
libs/ubsocket/: __init__.py  brpc_utils.py  k8s_api.py  result_verify.py  ubsocket_model.py
libs/ubturbo/: __init__.py
libs/ubturbo/AT/: __init__.py  at_common.py  ets_testcase.py  kernel_testcase.py  mugen_testcase.py  smap_common.py  smap_global_var.py  smap_interface.py  ub_testcase.py  vm_operation.py
libs/ubturbo/api/: __init__.py  docker.py  integration.py  libvirt.py  mempooling.py  mempooling_api.py  migrate.py  numa.py  oom.py  os_reliability.py  os_turbo.py  qemu.py  rack_manager.py  smap_tool.py  ssh.py  sysSentry.py  system.py  virtualization.py
libs/ubturbo/common/: __init__.py  basic.py  cida.py  connect.py  env.py  file_transport.py  json_utils.py  string_utils.py  xml_tool.py
libs/ubturbo/environment/: __init__.py  env_base.py  env_obmm.py  env_osturbo.py  env_smap.py  env_virtualization.py
libs/ubturbo/hooks/: hook_mem_pooling.py
libs/ubturbo/model/: __init__.py  libvirt.py  mempoolingcli.py  system.py  systemctl.py
libs/utils/: __init__.py  env_config.py  logger_compat.py  table_parser.py
resource/: README.md
resource/hcom/: perf_teststub_config.json
resource/hcom/test_data/: test_tool.json
resource/ubse/: ubse_mem_app.py
resource/ubse/Mem_SDK_Management/: Mem_BorrowAccount_SDK_001.py  Mem_BorrowedLent_IllegalParamSDK_001.py  Mem_BorrowedLent_legalParamSDK_001.py  Mem_GetInfo_legalParamSDK_001.py  Mem_NumaInfo_SDK_002.py  Mem_ShareAccount_SDK_001.py  TestUbsTopoLinkList_Python_SDK.py  TestUbsTopoNodeList_Python_SDK.py  TestUbsTopoNodeLocalGet_Python_SDK.py  lcne_view_double_UB_mem.py
resource/ubsio/: configurate_bio_conf.sh
resource/ubsio/pykvc_script/: script_UBSIO_KVCache_Put_014.py  script_UBSIO_KVcache_Delete_001.py  script_UBSIO_KVcache_Get_005.py  single_batch_put_random_kv.py  single_put_random_kv.py
resource/ubsrmrs/Container_Overcommit/: container_template.json  pod_template.json
resource/ubsrmrs/MemPooling/: borrow_exe.sh  config_input.json  init_images.sh  mempooling-D.xml  restart_ubse.sh  shutdown.sh  ubse_conf.sh
resource/ubsvirt/: shm_demo  shm_tool
resource/ubsvirt/topo/: test_test_vm_fragment_013_002_topo.json  test_test_vm_mem_borrow_001_topo.json  test_test_vm_mem_borrow_009_topo.json  test_test_vm_mem_borrow_010_topo.json  test_test_vm_mem_borrow_011_topo.json  test_test_vm_mem_borrow_012_topo.json  test_test_vm_mem_borrow_022_topo.json  test_test_vm_mem_return_008_topo.json  test_ubs_virt_002_topo.json  test_ubs_virt_004_topo.json  test_ubs_virt_005_topo.json  test_ubs_virt_006_topo.json  test_ubs_virt_011_topo.json  test_ubs_virt_012_topo.json  test_ubs_virt_015_topo.json  test_virtual_ms_agent_010_topo.json  test_virtual_vm_create_001_topo.json  test_virtual_vm_create_002_topo.json  test_virtual_vm_create_003_topo.json  test_vm_escape_dfx_006_topo.json  test_vm_fragment_009_topo.json  test_vm_fragment_013_topo.json  test_vm_fragment_014_topo.json  test_vm_fragment_023_topo.json  test_vm_fragment_025_topo.json  test_vm_fragment_028_topo.json  test_vm_fragment_031_topo.json  test_vm_fragment_032_topo.json  test_vm_mem_borrow_023_topo.json  (+11 more)
testcases/: conftest.py
testcases/container/: __init__.py  test_container_basic.py
testcases/ubse/: conftest.py  ubse_suite.json
testcases/ubsvirt/: conftest.py
testcases/ubturbo/: conftest.py
testcases/virt/: __init__.py  test_vm_basic.py
tests/: test_core.py  test_host_linux.py  test_utils.py
tools/poc_tools/: __init__.py  create_vm.py  delete_vm.py  gen_xml.py  install.sh  mem_free.py  poc_tools  virsh_cmd.py  vm_monitor.py
(+311 files in other folders)
